--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="noindex">
-<title>VDAS</title>
+<title>yunhyerim portfolio</title>
 
 <!-- 파비콘 링크 -->
 <link rel="Shortcut Icon" href="/favicon.ico"/>
@@ -37,7 +37,6 @@
                 <ul class="nav navbar-nav">
                     <li><a href="./abuot.html">About</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="http://placesforlove.com">Places</a></li>
                 </ul>
             </nav>
         </div>
@@ -88,7 +87,7 @@
                                 </h2>
                                 <p>- 다양한 디자인의 사이트</p>
                                 
-                                <a href="./abuot.html" class="more_btn">
+                                <a href="./portfolio.html" class="more_btn">
                                     More <span></span>
                                 </a>
                                 
