--- a/portfolio.html
+++ b/portfolio.html
@@ -27,68 +27,52 @@
 </head>
 <body>
 <div class="container-width">
-
-    <header role="banner" class="navbar  navbar-inverse header-sub">
+    <header role="banner" class="navbar navbar-fixed-top navbar-inverse" style="width: 90.125vw;margin: 0 auto;">
         <div class="container">
             <h1><a href="./index.html"></a></h1>
             <div class="navbar-header">
-          <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
         </div>
         <div class="navbar-inverse side-collapse in">
-          <nav role="navigation" class="navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="./abuot.html">About</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-            </ul>
-          </nav>
+            <nav role="navigation" class="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="./abuot.html">About</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
         </div>
         </div>
     </header>
-
-    <div class="container portfolio_container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>
-                    PORTFOLIO
-                </h1>
-            </div>
-            <div class="col-md-12 portfolio_list">
-                <ul class="clearfix">
-                    <li>
-                        <h2>VDAS 리뉴얼 홈페이지</h2>
-                        <p><span><img src="./img/time.png" alt="">디자인/코딩:100% (제이쿼리X)</span><span><img src="./img/book_1.png" alt="">제작 기간:2개월</span></p>
-                        <div class="project wow animated animated4 fadeInLeft" style="background-image: url(./img/vdas.png);">
-                            <div class="project-hover">
-                                <h2>VDAS</h2>
-
-                                <hr />
-                                <p>홈페이지가 아직 오픈하지 않아 공개가 불가능 합니다. 단, 간단한 시안과 경로만 보여드리도록 하겠습니다.</p>
-                                <a href="http://yhr1102.dothome.co.kr/index.php" class="more_btn">
-                                    More
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                       <h2>VDAS E-learning 홈페이지</h2>
-                        <p><span><img src="./img/time.png" alt="">코딩:100% </span><span><img src="./img/book_1.png" alt="">제작 기간:2개월</span></p>
-                        <div class="project wow animated animated4 fadeInLeft" style="background-image: url(./img/elearning.png)">
-                            <div class="project-hover">
-                                <h2>VDAS E-learning</h2>
-
-                                <hr />
-                                <p>개발과 오픈이 진행되지 않아 열람이 불가능 합니다</p>
-                                <a href="#" class="more_btn">Not More</a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>    
 </div>
 
-
+<div class="portf_box clearfix">
+    <div class="left_box"></div>
+    <div class="right_box">
+        <ul>
+            <li>
+                <a href="http://burncoin.io/" target="_blank"> 
+                </a>
+            </li>
+            <li>
+                <a href="http://exaplatform.io/en/index.html" target="_blank"> 
+                </a>
+            </li>
+            <li>
+                <a href="http://www.doosongift.com/" target="_blank">        
+                </a>
+            </li>
+            <li>
+                <a href="http://zeroplus75.cafe24.com/v2018/shop/list.php?ca_id=10" target="_blank">        
+                </a>
+            </li>
+            <li>
+                <a href="http://yhr1102.dothome.co.kr/index.php" target="_blank">        
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 
 </body>
