--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="slide-wrapper"> 
-    <header role="banner" class="navbar navbar-fixed-top navbar-inverse">
+    <header role="banner" class="navbar navbar-fixed-top navbar-inverse" style="padding: 15px 30px;">
         <div class="container">
             <h1><a href="./index.html"></a></h1>
             <div class="navbar-header">
@@ -88,7 +88,7 @@
                                         </h1>
                                         <p>사용자의 인터페이스를 통하여 고민하고 또 고민하는<br/>
     발전 가능성이 무한 한 UIUX디자이너 입니다.</p>
-                                        <a href="">
+                                        <a href="./abuot.html">
                                             MORE
                                         </a>
                                     </div>
@@ -103,7 +103,7 @@
                             <div class="grid_3">
                                 <div class="text_box">
                                     <h1>
-                                        PorFolio
+                                        portfolio
                                     </h1>
                                     <p>기본적인 스케치부터 와이어프레임 까지<br/> 차근차근
 진행하는 합니다.</p>
