--- a/abuot.html
+++ b/abuot.html
@@ -29,7 +29,7 @@
 <div class="container-width">
 
         <header role="banner" class="navbar  navbar-inverse header-sub">
-            <div class="container">
+            <div class="container" style="padding: 0px 7px;">
                 <h1><a href="./index.html"></a></h1>
                 <div class="navbar-header">
               <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -39,7 +39,6 @@
                 <ul class="nav navbar-nav">
                     <li><a href="./abuot.html">About</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
