--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="./abuot.html">About</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
-                
+                    <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
