--- a/abuot.html
+++ b/abuot.html
@@ -100,8 +100,8 @@
             </div>
             <div>
                 <span>Ai</span>
-                <h2>PHOTOSHOP</h2>
-                <p>mainbanner design 과 Web Design으로 사용합니다. photoshop의 스킬과 트렌드를 키우기 위해 항상 자료를 찾아보고 공부합니다.</p>
+                <h2>illustration</h2>
+                <p>아이콘, 캐릭터 등 여러가지 도형과 펜툴을 이용해 작업합니다. 현재는 입체감을 표현하기위해 동영상강의를 들으며 연습 중입니다.</p>
             </div>
             <div>
                 <span>Bt</span>
