--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     </h1>
                                     <p>기본적인 스케치부터 와이어프레임 까지<br/> 차근차근
 진행하는 합니다.</p>
-                                    <a href="">
+                                    <a href="./portfolio.html">
                                         MORE
                                     </a>
                                 </div>
