--- a/abuot.html
+++ b/abuot.html
@@ -75,7 +75,7 @@
                     
                     <li>
                         <h2 style="color: #ff039d;">resume</h2>
-                        <p><a href="#"   style="color: #ff039d;">MORE</a></p>
+                        <p><a href="./img/yhr.png"   style="color: #ff039d;">click</a></p>
                     </li>
                 </ul>
             </div>
