--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     <p>현대에 사는 우리에겐 인터넷은 가장 중요한 요소라고 생각합니다.<br/>
 인터넷을 사용하는 사용자들에게 편리함과 삶의 질을 높일 수 있도록<br/>
 끊임없이 공부하고 노력하는 UIUX 디자이너 윤혜림 입니다.</p>
-                                    <a href="">
+                                    <a href="./abuot.html">
                                         MORE
                                     </a>
                                 </div>
