--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 </head>
 <body>
 <div class="slide-wrapper"> 
-    <header role="banner" class="navbar navbar-fixed-top navbar-inverse" style="padding: 15px 30px;">
+    <header role="banner" class="navbar navbar-fixed-top navbar-inverse index-header">
         <div class="container">
             <h1><a href="./index.html"></a></h1>
             <div class="navbar-header">
-            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left">
+                <span class="icon-bar">
+                </span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div class="navbar-inverse side-collapse in">
             <nav role="navigation" class="navbar-collapse">
@@ -99,16 +103,18 @@
                 <div class="item">
                     <div class="fill">
                         <div class="container main_3">
-                            <div class="grid_3">
-                                <div class="text_box">
-                                    <h1>
-                                        portfolio
-                                    </h1>
-                                    <p>기본적인 스케치부터 와이어프레임 까지<br/> 차근차근
-진행하는 합니다.</p>
-                                    <a href="./portfolio.html">
-                                        MORE
-                                    </a>
+                            <div class="grid">
+                                <div class="grid_3">
+                                    <div class="text_box">
+                                        <h1>
+                                            portfolio
+                                        </h1>
+                                        <p>기본적인 스케치부터 와이어프레임 까지<br/> 차근차근
+    진행하는 합니다.</p>
+                                        <a href="./portfolio.html">
+                                            MORE
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
