--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,11 @@
         <div class="container">
             <h1><a href="./index.html"></a></h1>
             <div class="navbar-header">
-            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left">
+                <span class="icon-bar">
+                </span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div class="navbar-inverse side-collapse in">
             <nav role="navigation" class="navbar-collapse">
