--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,8 @@
 <!-- jQuery 인라인 호출 -->
 <script>
     $(document).ready(function(){
-        $("tototo").click(function(){
-            alert("시발")
+        $(".tototo").click(function(){
+            alert("죄송합니다. 홈페이지가 아직 오픈 예정 중입니다. 정확한 날짜가 나오는 대로 공지해드리겠습니다. 감사합니다.")
         });
     });
 </script>
