--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="tototo" >        
+                <a href="#" class="tototo close" >        
                 </a>
             </li>
             <li>
@@ -87,7 +87,7 @@
 <script>
     $(document).ready(function(){
         $(".tototo").click(function(){
-            alert("죄송합니다. 홈페이지가 아직 오픈 예정 중입니다. 정확한 날짜가 나오는 대로 공지해드리겠습니다. 감사합니다.")
+            alert("죄송합니다. 홈페이지가 아직 오픈 예정 중입니다. 정확한 날짜가 나오는 대로 공지해드리도록 하겠습니다. 감사합니다")
         });
     });
 </script>
