--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                                     <h1>
                                         Yun Hye rim's<br/> Portfolio
                                     </h1>
-                                    <h2>예술과 디자인을 사랑하는 UIUX 디자이너</h2>
+                                    <h2>예술과 디자인을 사랑하는 UI/UX 디자이너</h2>
                                     <p>현대에 사는 우리에겐 인터넷은 가장 중요한 요소라고 생각합니다.<br/>
 인터넷을 사용하는 사용자들에게 편리함과 삶의 질을 높일 수 있도록<br/>
-끊임없이 공부하고 노력하는 UIUX 디자이너 윤혜림 입니다.</p>
+끊임없이 공부하고 노력하는 UI/UX 디자이너 윤혜림 입니다.</p>
                                     <a href="./abuot.html">
                                         MORE
                                     </a>
@@ -87,10 +87,10 @@
                                 <div class="grid_3">
                                     <div class="text_box">
                                         <h1>
-                                            About Us
+                                            About me
                                         </h1>
                                         <p>사용자의 인터페이스를 통하여 고민하고 또 고민하는<br/>
-    발전 가능성이 무한 한 UIUX디자이너 입니다.</p>
+    발전 가능성이 무한 한 UI/UX디자이너 입니다.</p>
                                         <a href="./abuot.html">
                                             MORE
                                         </a>
@@ -128,7 +128,7 @@
                                     <h1>
                                         Contact
                                     </h1>
-                                    <p>예술과 디자인을 사랑하는 UIUX디자이너 윤혜림, 언제든지 연락주세요</p>
+                                    <p>예술과 디자인을 사랑하는 UI/UX디자이너 윤혜림, 언제든지 연락주세요</p>
                                     <a href="">
                                         010.5671.6545
                                     </a>
