--- a/abuot.html
+++ b/abuot.html
@@ -109,7 +109,7 @@
             </div>
             <div>
                 <span>Bt</span>
-                <h2>BOOTSTRAPK</h2>
+                <h2>BOOTSTRAP</h2>
                 <p>반응형 홈페이지를 구축할때 사용합니다. 게다가 여러 디자인 폼과 효과들이 많기 때문에 제이쿼리와 css3를 공부하기 간편하기 때문에 자주 이용합니다. </p>
             </div>
             
