--- a/abuot.html
+++ b/abuot.html
@@ -78,8 +78,8 @@
                     
                     
                     <li>
-                        <h2 style="color: #ff039d;">resume</h2>
-                        <p><a href="./img/yhr.png"   style="color: #ff039d;">click</a></p>
+                        <h2 style="color: #a249cd;">resume</h2>
+                        <p><a href="./img/yhr.png"   style="color: #a249cd;">click</a></p>
                     </li>
                 </ul>
             </div>
@@ -131,10 +131,6 @@
     <div class="grid clearfix">
         <h1><a href="index.html"></a></h1>
         <p>Copyright © 2018 YUNHYERIM Inc.</p>
-        <div class="sns">
-            <a href="#"><img src="#" alt="페이스북"></a>
-            <a href="#"><img src="#" alt="인스타"></a>
-        </div>
     </div>
 </footer>  
 
