--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,10 @@
     <div class="left_box"></div>
     <div class="right_box">
         <ul>
+           <li>
+                <a href="./bitpider_main.html" target="_blank" class="yoyo"> 
+                </a>
+            </li>
             <li>
                 <a href="http://burncoin.io/" target="_blank"> 
                 </a>
@@ -88,6 +92,11 @@
     $(document).ready(function(){
         $(".tototo").click(function(){
             alert("죄송합니다. 홈페이지가 아직 오픈 예정 중입니다. 정확한 날짜가 나오는 대로 공지해드리도록 하겠습니다. 감사합니다")
+        });
+    });
+    $(document).ready(function(){
+        $(".yoyo").click(function(){
+            alert("본 화면은 이미지로 구성되었습니다.")
         });
     });
 </script>
